--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,10 @@
-
 title: Radian's Blog
 description: Few posts from time to time
 
 contact:
   linkedin: http://www.linkedin.com/profile/view?id=69111606
   github: https://github.com/tabdulradi
-  twitter: http://twitter.com/tamer_radi
+  twitter: http://twitter.com/tabdulradi
   flickr: http://www.flickr.com/photos/tamer_radi/
   skype: skype:tamer_radi?call
   facebook: https://www.facebook.com/tamer.radi
